testsuite/tests/grammar/invalid_lkt/two_grammars.lkt
import lexer_example

grammar foo_grammar1 {}
grammar foo_grammar2 {}
